--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ p {
   font-size: 30px;
 }
 html {
-  background: linear-gradient(180deg, #000000, #2E2E2E, #FFFFFF);
+  background: linear-gradient(180deg, #FFFFFF, #2E2E2E, #000000);
 background-size: cover;
 background-attachment: fixed;
 }
