--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ p {
   font-size: 30px;
 }
 html {
-  background: linear-gradient(180deg, #87CEEB, #8A8A8A, #737373, #5C5C5C, #454545, #2E2E2E, #000000);
+  background: linear-gradient(180deg, #7EC8E3, #0000FF, #000C66, #050A30);
 background-size: cover;
 background-attachment: fixed;
 }
