--- a/style.css
+++ b/style.css
@@ -28,3 +28,13 @@ background-attachment: fixed;
   width: 500px;
   height: 300px;
 }
+#myProgress {
+  width: 100%;
+  background-color: grey;
+}
+
+#myBar {
+  width: 1%;
+  height: 30px;
+  background-color: green;
+}
